# pytrajviz

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
examples/: demo.ipynb  md1.gro  md1.xtc
pytrajviz/: __init__.py  app.py
